parser/ljl_parser.go
// Code generated from /Volumes/Code/Workspace/lijie0123/ljl/Ljl.g4 by ANTLR 4.9.1. DO NOT EDIT.

package parser // Ljl
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa


var literalNames = []string{
	"", "';'", "'type'", "'struct'", "'{'", "'}'", "'='", "':'", "'extern'", 
	"'fn'", "'('", "')'", "'->'", "','", "'*'", "'/'", "'+'", "'-'", "'>'", 
	"'<'", "'>='", "'<='", "'=='", "'!='", "'!'", "'&&'", "'||'", "'if'", "'then'", 
	"'else'", "'.'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
	"", "", "", "", "", "", "", "", "", "", "", "", "", "INT", "FLOAT", "STRING", 
	"ID", "COMMENT", "WS",
}

var ruleNames = []string{
	"file", "top", "typeDefine", "structMem", "funcExtern", "funcDefine", "funcProto", 
	"paramList", "param", "typ", "block", "expr", "tupleVal", "literal",
}
type LjlParser struct {
	*antlr.BaseParser
}

// NewLjlParser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *LjlParser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewLjlParser(input antlr.TokenStream) *LjlParser {
	this := new(LjlParser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Ljl.g4"

	return this
}


// LjlParser tokens.
const (
	LjlParserEOF = antlr.TokenEOF
	LjlParserT__0 = 1
	LjlParserT__1 = 2
	LjlParserT__2 = 3
	LjlParserT__3 = 4
	LjlParserT__4 = 5
	LjlParserT__5 = 6
	LjlParserT__6 = 7
	LjlParserT__7 = 8
	LjlParserT__8 = 9
	LjlParserT__9 = 10
	LjlParserT__10 = 11
	LjlParserT__11 = 12
	LjlParserT__12 = 13
	LjlParserT__13 = 14
	LjlParserT__14 = 15
	LjlParserT__15 = 16
	LjlParserT__16 = 17
	LjlParserT__17 = 18
	LjlParserT__18 = 19
	LjlParserT__19 = 20
	LjlParserT__20 = 21
	LjlParserT__21 = 22
	LjlParserT__22 = 23
	LjlParserT__23 = 24
	LjlParserT__24 = 25
	LjlParserT__25 = 26
	LjlParserT__26 = 27
	LjlParserT__27 = 28
	LjlParserT__28 = 29
	LjlParserT__29 = 30
	LjlParserINT = 31
	LjlParserFLOAT = 32
	LjlParserSTRING = 33
	LjlParserID = 34
	LjlParserCOMMENT = 35
	LjlParserWS = 36
)

// LjlParser rules.
const (
	LjlParserRULE_file = 0
	LjlParserRULE_top = 1
	LjlParserRULE_typeDefine = 2
	LjlParserRULE_structMem = 3
	LjlParserRULE_funcExtern = 4
	LjlParserRULE_funcDefine = 5
	LjlParserRULE_funcProto = 6
	LjlParserRULE_paramList = 7
	LjlParserRULE_param = 8
	LjlParserRULE_typ = 9
	LjlParserRULE_block = 10
	LjlParserRULE_expr = 11
	LjlParserRULE_tupleVal = 12
	LjlParserRULE_literal = 13
)

// IFileContext is an interface to support dynamic dispatch.
type IFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFileContext differentiates from other interfaces.
	IsFileContext()
}

type FileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFileContext() *FileContext {
	var p = new(FileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_file
	return p
}

func (*FileContext) IsFileContext() {}

func NewFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FileContext {
	var p = new(FileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_file

	return p
}

func (s *FileContext) GetParser() antlr.Parser { return s.parser }

func (s *FileContext) EOF() antlr.TerminalNode {
	return s.GetToken(LjlParserEOF, 0)
}

func (s *FileContext) AllTop() []ITopContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ITopContext)(nil)).Elem())
	var tst = make([]ITopContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ITopContext)
		}
	}

	return tst
}

func (s *FileContext) Top(i int) ITopContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITopContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ITopContext)
}

func (s *FileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitFile(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) File() (localctx IFileContext) {
	localctx = NewFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LjlParserRULE_file)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(31)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)


	for (((_la) & -(0x1f+1)) == 0 && ((1 << uint(_la)) & ((1 << LjlParserT__1) | (1 << LjlParserT__7) | (1 << LjlParserT__8))) != 0) {
		{
			p.SetState(28)
			p.Top()
		}


		p.SetState(33)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(34)
		p.Match(LjlParserEOF)
	}



	return localctx
}


// ITopContext is an interface to support dynamic dispatch.
type ITopContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTopContext differentiates from other interfaces.
	IsTopContext()
}

type TopContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTopContext() *TopContext {
	var p = new(TopContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_top
	return p
}

func (*TopContext) IsTopContext() {}

func NewTopContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TopContext {
	var p = new(TopContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_top

	return p
}

func (s *TopContext) GetParser() antlr.Parser { return s.parser }

func (s *TopContext) FuncDefine() IFuncDefineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncDefineContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncDefineContext)
}

func (s *TopContext) FuncExtern() IFuncExternContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncExternContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncExternContext)
}

func (s *TopContext) TypeDefine() ITypeDefineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypeDefineContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypeDefineContext)
}

func (s *TopContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TopContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *TopContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitTop(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) Top() (localctx ITopContext) {
	localctx = NewTopContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LjlParserRULE_top)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(41)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case LjlParserT__8:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(36)
			p.FuncDefine()
		}


	case LjlParserT__7:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(37)
			p.FuncExtern()
		}
		{
			p.SetState(38)
			p.Match(LjlParserT__0)
		}


	case LjlParserT__1:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(40)
			p.TypeDefine()
		}



	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}


	return localctx
}


// ITypeDefineContext is an interface to support dynamic dispatch.
type ITypeDefineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsTypeDefineContext differentiates from other interfaces.
	IsTypeDefineContext()
}

type TypeDefineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTypeDefineContext() *TypeDefineContext {
	var p = new(TypeDefineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_typeDefine
	return p
}

func (*TypeDefineContext) IsTypeDefineContext() {}

func NewTypeDefineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TypeDefineContext {
	var p = new(TypeDefineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_typeDefine

	return p
}

func (s *TypeDefineContext) GetParser() antlr.Parser { return s.parser }

func (s *TypeDefineContext) CopyFrom(ctx *TypeDefineContext) {
	s.BaseParserRuleContext.CopyFrom(ctx.BaseParserRuleContext)
}

func (s *TypeDefineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeDefineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}




type StructDefineContext struct {
	*TypeDefineContext
}

func NewStructDefineContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *StructDefineContext {
	var p = new(StructDefineContext)

	p.TypeDefineContext = NewEmptyTypeDefineContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TypeDefineContext))

	return p
}

func (s *StructDefineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StructDefineContext) ID() antlr.TerminalNode {
	return s.GetToken(LjlParserID, 0)
}

func (s *StructDefineContext) AllStructMem() []IStructMemContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IStructMemContext)(nil)).Elem())
	var tst = make([]IStructMemContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IStructMemContext)
		}
	}

	return tst
}

func (s *StructDefineContext) StructMem(i int) IStructMemContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStructMemContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IStructMemContext)
}


func (s *StructDefineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitStructDefine(s)

	default:
		return t.VisitChildren(s)
	}
}


type TypeAliasContext struct {
	*TypeDefineContext
}

func NewTypeAliasContext(parser antlr.Parser, ctx antlr.ParserRuleContext) *TypeAliasContext {
	var p = new(TypeAliasContext)

	p.TypeDefineContext = NewEmptyTypeDefineContext()
	p.parser = parser
	p.CopyFrom(ctx.(*TypeDefineContext))

	return p
}

func (s *TypeAliasContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TypeAliasContext) ID() antlr.TerminalNode {
	return s.GetToken(LjlParserID, 0)
}

func (s *TypeAliasContext) Typ() ITypContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypContext)
}


func (s *TypeAliasContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitTypeAlias(s)

	default:
		return t.VisitChildren(s)
	}
}



func (p *LjlParser) TypeDefine() (localctx ITypeDefineContext) {
	localctx = NewTypeDefineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LjlParserRULE_typeDefine)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		localctx = NewStructDefineContext(p, localctx)
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(43)
			p.Match(LjlParserT__1)
		}
		{
			p.SetState(44)
			p.Match(LjlParserID)
		}
		{
			p.SetState(45)
			p.Match(LjlParserT__2)
		}
		{
			p.SetState(46)
			p.Match(LjlParserT__3)
		}
		p.SetState(50)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)


		for _la == LjlParserID {
			{
				p.SetState(47)
				p.StructMem()
			}


			p.SetState(52)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(53)
			p.Match(LjlParserT__4)
		}


	case 2:
		localctx = NewTypeAliasContext(p, localctx)
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(54)
			p.Match(LjlParserT__1)
		}
		{
			p.SetState(55)
			p.Match(LjlParserID)
		}
		{
			p.SetState(56)
			p.Match(LjlParserT__5)
		}
		{
			p.SetState(57)
			p.Typ()
		}

	}


	return localctx
}


// IStructMemContext is an interface to support dynamic dispatch.
type IStructMemContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStructMemContext differentiates from other interfaces.
	IsStructMemContext()
}

type StructMemContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStructMemContext() *StructMemContext {
	var p = new(StructMemContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_structMem
	return p
}

func (*StructMemContext) IsStructMemContext() {}

func NewStructMemContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StructMemContext {
	var p = new(StructMemContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_structMem

	return p
}

func (s *StructMemContext) GetParser() antlr.Parser { return s.parser }

func (s *StructMemContext) ID() antlr.TerminalNode {
	return s.GetToken(LjlParserID, 0)
}

func (s *StructMemContext) Typ() ITypContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypContext)
}

func (s *StructMemContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StructMemContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *StructMemContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitStructMem(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) StructMem() (localctx IStructMemContext) {
	localctx = NewStructMemContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, LjlParserRULE_structMem)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(LjlParserID)
	}
	{
		p.SetState(61)
		p.Match(LjlParserT__6)
	}
	{
		p.SetState(62)
		p.Typ()
	}



	return localctx
}


// IFuncExternContext is an interface to support dynamic dispatch.
type IFuncExternContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFuncExternContext differentiates from other interfaces.
	IsFuncExternContext()
}

type FuncExternContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFuncExternContext() *FuncExternContext {
	var p = new(FuncExternContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_funcExtern
	return p
}

func (*FuncExternContext) IsFuncExternContext() {}

func NewFuncExternContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FuncExternContext {
	var p = new(FuncExternContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_funcExtern

	return p
}

func (s *FuncExternContext) GetParser() antlr.Parser { return s.parser }

func (s *FuncExternContext) FuncProto() IFuncProtoContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncProtoContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncProtoContext)
}

func (s *FuncExternContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncExternContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FuncExternContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitFuncExtern(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) FuncExtern() (localctx IFuncExternContext) {
	localctx = NewFuncExternContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, LjlParserRULE_funcExtern)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(LjlParserT__7)
	}
	{
		p.SetState(65)
		p.FuncProto()
	}



	return localctx
}


// IFuncDefineContext is an interface to support dynamic dispatch.
type IFuncDefineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFuncDefineContext differentiates from other interfaces.
	IsFuncDefineContext()
}

type FuncDefineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFuncDefineContext() *FuncDefineContext {
	var p = new(FuncDefineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_funcDefine
	return p
}

func (*FuncDefineContext) IsFuncDefineContext() {}

func NewFuncDefineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FuncDefineContext {
	var p = new(FuncDefineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_funcDefine

	return p
}

func (s *FuncDefineContext) GetParser() antlr.Parser { return s.parser }

func (s *FuncDefineContext) FuncProto() IFuncProtoContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IFuncProtoContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IFuncProtoContext)
}

func (s *FuncDefineContext) Block() IBlockContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBlockContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *FuncDefineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncDefineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FuncDefineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitFuncDefine(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) FuncDefine() (localctx IFuncDefineContext) {
	localctx = NewFuncDefineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, LjlParserRULE_funcDefine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(67)
		p.FuncProto()
	}
	{
		p.SetState(68)
		p.Block()
	}



	return localctx
}


// IFuncProtoContext is an interface to support dynamic dispatch.
type IFuncProtoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsFuncProtoContext differentiates from other interfaces.
	IsFuncProtoContext()
}

type FuncProtoContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyFuncProtoContext() *FuncProtoContext {
	var p = new(FuncProtoContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_funcProto
	return p
}

func (*FuncProtoContext) IsFuncProtoContext() {}

func NewFuncProtoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FuncProtoContext {
	var p = new(FuncProtoContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_funcProto

	return p
}

func (s *FuncProtoContext) GetParser() antlr.Parser { return s.parser }

func (s *FuncProtoContext) ID() antlr.TerminalNode {
	return s.GetToken(LjlParserID, 0)
}

func (s *FuncProtoContext) ParamList() IParamListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParamListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParamListContext)
}

func (s *FuncProtoContext) Typ() ITypContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ITypContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(ITypContext)
}

func (s *FuncProtoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FuncProtoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *FuncProtoContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitFuncProto(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) FuncProto() (localctx IFuncProtoContext) {
	localctx = NewFuncProtoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, LjlParserRULE_funcProto)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(70)
		p.Match(LjlParserT__8)
	}
	{
		p.SetState(71)
		p.Match(LjlParserID)
	}
	{
		p.SetState(72)
		p.Match(LjlParserT__9)
	}
	{
		p.SetState(73)
		p.ParamList()
	}
	{
		p.SetState(74)
		p.Match(LjlParserT__10)
	}
	{
		p.SetState(75)
		p.Match(LjlParserT__11)
	}
	{
		p.SetState(76)
		p.Typ()
	}



	return localctx
}


// IParamListContext is an interface to support dynamic dispatch.
type IParamListContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamListContext differentiates from other interfaces.
	IsParamListContext()
}

type ParamListContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyParamListContext() *ParamListContext {
	var p = new(ParamListContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = LjlParserRULE_paramList
	return p
}

func (*ParamListContext) IsParamListContext() {}

func NewParamListContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParamListContext {
	var p = new(ParamListContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = LjlParserRULE_paramList

	return p
}

func (s *ParamListContext) GetParser() antlr.Parser { return s.parser }

func (s *ParamListContext) AllParam() []IParamContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IParamContext)(nil)).Elem())
	var tst = make([]IParamContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IParamContext)
		}
	}

	return tst
}

func (s *ParamListContext) Param(i int) IParamContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParamContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IParamContext)
}

func (s *ParamListContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParamListContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}


func (s *ParamListContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LjlVisitor:
		return t.VisitParamList(s)

	default:
		return t.VisitChildren(s)
	}
}




func (p *LjlParser) ParamList() (localctx IParamListContext) {
	localctx = NewParamListContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, LjlParserRULE_paramList)
	var _la int


	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(87)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case LjlParserT__10:
		p.EnterOuterAlt(localctx, 1)


	case LjlParserID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(79)
			p.Param()
		}
		p.SetState(84)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)


		for _la == LjlParserT__12 {
			{
				p.SetState(80)
				p.Match(LjlParserT__12)
			}
			{
				p.SetState(81)
				p.Param()
			}


			p.SetState(86)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}



	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}


	return localctx
}


// IParamContext is an interface to support dynamic dispatch.
type IParamContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsParamContext differentiates from other interfaces.
	IsParamContext()
}

type ParamContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}
